--- a/index.html
+++ b/index.html
@@ -199,12 +199,14 @@
                 <ul style="list-style: none; padding-left: 0;">
                   <li>4:00 p.m.</li>
                   <li>6:00 p.m.</li>
+                  <li>7:00 p.m</li>
                 </ul>
               </td>
               <td>
                 <ul style="list-style: none; padding-left: 0;">
                   <li>Adoración</li>
                   <li>Misa</li>
+                  <li>Adoración</li>
                 </ul>
               </td>
             </tr>
